[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse_abliterator"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A package for reverse ablitation of language models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "einops",
    "tqdm",
    "transformer_lens",
    "jaxtyping",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/reverse_abliterator"
"Bug Tracker" = "https://github.com/yourusername/reverse_abliterator/issues"