[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse_abliterator"
version = "0.1.0"
authors = [
  { name="Leo Borcherding", email="borchink@gmail.com" },
]
description = "A package for reverse ablitation of language models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch",
    "einops",
    "tqdm",
    "transformer_lens",
    "jaxtyping",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/leoleojames1/reverse-abliterator"
"Bug Tracker" = "https://github.com/leoleojames1/reverse-abliterator/issues"
"Source" = "https://github.com/leoleojames1/reverse-abliterator"

[tool.setuptools.packages.find]
where = ["src"]
include = ["reverse_abliterator*"]
namespaces = false

[tool.setuptools]
package-dir = {"" = "src"}